criação da função que calcula o valor total da ordem de serviço

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">atividaden1</string>
+    <string name="app_name">Good Times</string>
     <string name="title_activity_login">activity_login</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
